--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
@@ -38,13 +38,14 @@
     "ionic-angular": "3.9.3",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
-    "rxjs": "^6.4.0",
+    "rxjs": "5.5.11",
+    "rxjs-compat": "^6.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
-    "typescript": "~3.3.3"
+    "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
