--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "rxjs": "5.5.11",
     "rxjs-compat": "^6.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
+    "zone.js": "0.8.29",
+    "cordova-android": "~7.1.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "@ionic/lab": "1.0.21",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -59,7 +61,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
